<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.nequiz_omen.abogado.Cliente_Formulario"
    tools:showIn="@layout/activity_cliente__formulario">



    <!--======  Inicio Contenido APP -->

    <ScrollView
        android:id="@+id/scrollViewDatos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/toolbar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="6dp"
            android:paddingRight="6dp"
            android:paddingTop="7dp"
            tools:context=".Cliente">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/border_label_gris"
                android:orientation="vertical"
                android:padding="10dp">

                <TextView

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/nombre"
                    tools:layout_editor_absoluteX="16dp"
                    tools:layout_editor_absoluteY="66dp" />

                <EditText
                    android:id="@+id/campoNombre"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="textPersonName"
                    tools:layout_editor_absoluteX="16dp"
                    tools:layout_editor_absoluteY="20dp" />

                <TextView

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentStart="true"
                    android:text="@string/tipo_de_persona"
                    tools:layout_editor_absoluteX="16dp"
                    tools:layout_editor_absoluteY="66dp" />


                <!--  TIPO DE PERSONA RADIO BUTTON -->
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="37dp"
                    android:orientation="horizontal">

                    <RadioGroup
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <RadioButton
                            android:id="@+id/radioButton"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="15dp"
                            android:text="@string/fisica"
                            android:onClick="onRadioButtonClicked"/>

                        <RadioButton
                            android:id="@+id/radioButton2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="50dp"
                            android:text="@string/moral"
                            android:onClick="onRadioButtonClicked"/>
                    </RadioGroup>
                </RelativeLayout>


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="29dp"
                    android:text="@string/correo_electronico"
                    tools:layout_editor_absoluteX="16dp"
                    tools:layout_editor_absoluteY="66dp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                   <!-- <EditText
                        android:id="@+id/campoCorreo"
                        android:layout_width="312dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:ems="10"
                        android:hint="correo@ejemplo.com"
                        android:inputType="textEmailAddress"
                        tools:layout_editor_absoluteX="16dp"
                        tools:layout_editor_absoluteY="136dp" />-->

                    <AutoCompleteTextView
                        android:id="@+id/campoCorreo"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:hint="correo@ejemplo.com"
                        android:inputType="textEmailAddress"
                        android:ems="10" />

                    <ImageView
                        android:id="@+id/imageView2"
                        android:layout_width="40dp"
                        android:layout_height="45dp"
                        android:layout_weight="1"
                        app:srcCompat="@drawable/ic_email_cliente"
                        tools:ignore="VectorDrawableCompat" />
                </LinearLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="6dp"
                    android:text="Género"
                    tools:layout_editor_absoluteX="16dp"
                    tools:layout_editor_absoluteY="66dp" />


                <!--   RADIO BUTTON PARA GENERO -->
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <RadioGroup
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <RadioButton
                            android:id="@+id/radioButton3"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="15dp"
                            android:text="Masculino"
                            android:onClick="onRadioButtonClicked"/>

                        <RadioButton
                            android:id="@+id/radioButton4"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="22dp"
                            android:text="Femenino"
                            android:onClick="onRadioButtonClicked"/>
                    </RadioGroup>
                </RelativeLayout>

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Fecha de Nacimiento"
                    tools:layout_editor_absoluteX="16dp"
                    tools:layout_editor_absoluteY="66dp" />

                <EditText
                    android:id="@+id/fecha_nacimiento"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:focusable="false"
                    android:hint="  click para Fecha"
                    android:inputType="date"
                    android:maxLines="1" />

            </LinearLayout>

            <!--   ===========    SEGUNDA PARTE DEL FORMULARIO  ============0   -->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:background="@drawable/border_label_gris"
                android:orientation="vertical"
                android:padding="@dimen/activity_horizontal_margin">

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Dirección" />

                <EditText
                    android:id="@+id/campoDireccion"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="textPostalAddress" />

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Tel. Movil" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <EditText
                        android:id="@+id/campoTelMovil"
                        android:layout_width="312dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:ems="10"
                        android:inputType="phone" />

                    <ImageView
                        android:id="@+id/imageView3"
                        android:layout_width="30dp"
                        android:layout_height="40dp"
                        android:layout_weight="1"
                        app:srcCompat="@drawable/ic_celular_cliente"
                        tools:ignore="VectorDrawableCompat"/>
                </LinearLayout>

                <TextView
                    android:id="@+id/textView9"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Tel. Casa" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <EditText
                        android:id="@+id/campoTelCasa"
                        android:layout_width="312dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:ems="10"
                        android:inputType="phone" />

                    <ImageView
                        android:id="@+id/imageView4"
                        android:layout_width="50dp"
                        android:layout_height="40dp"
                        android:layout_weight="1"
                        app:srcCompat="@drawable/ic_tel_casa_cliente"
                        tools:ignore="VectorDrawableCompat" />
                </LinearLayout>

                <TextView
                    android:id="@+id/textView10"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Tel. Oficina" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <EditText
                        android:id="@+id/campoTelOficina"
                        android:layout_width="312dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:ems="10"
                        android:inputType="phone" />

                    <ImageView
                        android:id="@+id/imageView5"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_weight="1"
                        app:srcCompat="@drawable/ic_tel_oficina_cliente"
                        tools:ignore="VectorDrawableCompat"
                        android:contentDescription="TODO" />
                </LinearLayout>

                <TextView
                    android:id="@+id/textView11"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/dependientes_economicos" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <EditText
                        android:id="@+id/campoDependientes"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:ems="10"
                        android:inputType="textPersonName" />

                </LinearLayout>

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/notas" />

                <EditText
                    android:id="@+id/campoNotas"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="textMultiLine"/>  <!-- PARA EL SALTO DE LINEA -->

            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>
