<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.nequiz_omen.abogado.ClienteFragment"
    android:id="@+id/activity_detalle_usuario">

    <!-- TODO: Update blank fragment layout -->

    <!--======  Inicio Contenido APP -->

    <ScrollView
        android:id="@+id/scrollViewDatos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/toolbar">

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="6dp"
            android:paddingRight="6dp"
            android:paddingTop="7dp"
            tools:context=".Cliente">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/border_label"
                android:orientation="vertical"
                android:padding="10dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/nombre"
                    tools:layout_editor_absoluteX="16dp"
                    tools:layout_editor_absoluteY="66dp"/>

                <TextView
                    android:id="@+id/campoNombre"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:text="Campo Nombre"
                    style="@style/CodeFont"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/tipo_de_persona"
                    tools:layout_editor_absoluteX="16dp"
                    tools:layout_editor_absoluteY="66dp" />

                <TextView
                    android:id="@+id/campoTipo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Tipo de persona"
                    style="@style/CodeFont"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/correo_electronico"
                    android:paddingLeft="45dp"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/imageView2"
                        android:layout_width="48dp"
                        android:layout_height="40dp"
                        android:layout_weight="0"
                        app:srcCompat="@drawable/ic_email_cliente"
                        tools:ignore="VectorDrawableCompat" />

                    <TextView
                        android:id="@+id/campoCorreo"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:ems="10"
                        android:text="Correo"
                        style="@style/CodeFont"/>


                </LinearLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Género"
                    tools:layout_editor_absoluteX="16dp"
                    tools:layout_editor_absoluteY="66dp" />


                <TextView
                    android:id="@+id/campoGenero"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:text="Genero"
                    style="@style/CodeFont"/>

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Fecha de Nacimiento" />

                <TextView
                    android:id="@+id/campoNacimiento"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:text="fecha nacimiento"
                    style="@style/CodeFont"/>

            </LinearLayout>

            <!--   ===========    SEGUNDA PARTE DEL FORMULARIO  ============0   -->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:background="@drawable/border_label"
                android:orientation="vertical"
                android:padding="@dimen/activity_horizontal_margin">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Dirección" />

                <TextView
                    android:id="@+id/campoDireccion"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:text="DIreccion"
                    style="@style/CodeFont"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Tel. Movil"
                    android:paddingLeft="45dp"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/imageView3"
                        android:layout_width="44dp"
                        android:layout_height="40dp"
                        android:layout_weight="0"
                        app:srcCompat="@drawable/ic_celular_cliente"
                        tools:ignore="VectorDrawableCompat"/>

                    <TextView
                        android:id="@+id/campoTelMovil"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:ems="10"
                        android:text="Telefono"
                        style="@style/CodeFont"/>


                </LinearLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Tel. Casa"
                    android:paddingLeft="45dp"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="44dp"
                        android:layout_height="40dp"
                        android:layout_weight="0"
                        app:srcCompat="@drawable/ic_tel_casa_cliente"
                        tools:ignore="VectorDrawableCompat" />

                    <TextView
                        android:id="@+id/campoTelCasa"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:ems="10"
                        android:text="Tel. Casa"
                        style="@style/CodeFont" />

                </LinearLayout>

                <TextView
                    android:id="@+id/textView10"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Tel. Oficina"
                    android:paddingLeft="45dp"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="50dp"
                        android:layout_height="40dp"
                        android:layout_weight="0"
                        app:srcCompat="@drawable/ic_tel_oficina_cliente"
                        tools:ignore="VectorDrawableCompat"
                        android:contentDescription="TODO" />

                    <TextView
                        android:id="@+id/campoTelOficina"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:ems="10"
                        android:text="Tel. Oficina"
                        style="@style/CodeFont" />

                </LinearLayout>

                <TextView
                    android:id="@+id/textView11"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/dependientes_economicos" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/campoDependientes"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="DEPENDIENTES"
                        style="@style/CodeFont" />

                </LinearLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/notas" />

                <TextView
                    android:id="@+id/campoNotas"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Notas"
                    style="@style/CodeFont"/>  <!-- PARA EL SALTO DE LINEA -->

            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</FrameLayout>
